results/SpecGenBench/4-shot/log-BubbleSortDesc-2023_11_27_17_16_00.txt
public class BubbleSortDesc { 
    //@ requires arr != null;
    //@ ensures (\forall int i, j; 0 <= i && i < arr.length && 0 <= j && j < arr.length; i < j ==> arr[i] >= arr[j]);
    void swap(int x, int y,  int array[]) {
        int temp;     
        temp = array[x];
        array[x] = array[y];
        array[y] = temp;
    }

    //@ requires arr != null;
    //@ ensures \result != null && \result.length == arr.length && (\forall int i, j; 0 <= i && i < \result.length && 0 <= j && j < \result.length; i < j ==> \result[i] >= \result[j]);
    int[] bubbleSort(int arr[]) {
        int n = arr.length;

        //@ maintaining 0 <= i && i <= n-1;
        //@ maintaining (\forall int k, l; 0 <= k && k < i && 0 <= l && l < i; arr[k] >= arr[l]);
        //@ decreases n - i;
        for (int i = 0; i < n-1; i++) {	

            //@ maintaining 0 <= j && j <= n-i-1;
            //@ maintaining (\forall int k, l; 0 <= k && k < j && 0 <= l && l < j; arr[k] >= arr[l]);
            //@ decreases n - i - j;
            for (int j = 0; j < n-i-1; j++) {
                if (arr[j+1] > arr[j]) {  
		     swap(j, j + 1, arr); 
                } 
	    }
	} 
	return arr;
    } 
}
/home/max/Documents/JMLGPT/tmp/BubbleSortDesc.java:2: error: cannot find symbol
    //@ requires arr != null;
                 ^
  symbol:   variable arr
  location: class BubbleSortDesc
/home/max/Documents/JMLGPT/tmp/BubbleSortDesc.java:3: error: cannot find symbol
    //@ ensures (\forall int i, j; 0 <= i && i < arr.length && 0 <= j && j < arr.length; i < j ==> arr[i] >= arr[j]);
                                                 ^
  symbol:   variable arr
  location: class BubbleSortDesc
/home/max/Documents/JMLGPT/tmp/BubbleSortDesc.java:3: error: cannot find symbol
    //@ ensures (\forall int i, j; 0 <= i && i < arr.length && 0 <= j && j < arr.length; i < j ==> arr[i] >= arr[j]);
                                                                             ^
  symbol:   variable arr
  location: class BubbleSortDesc
/home/max/Documents/JMLGPT/tmp/BubbleSortDesc.java:3: error: cannot find symbol
    //@ ensures (\forall int i, j; 0 <= i && i < arr.length && 0 <= j && j < arr.length; i < j ==> arr[i] >= arr[j]);
                                                                                                   ^
  symbol:   variable arr
  location: class BubbleSortDesc
/home/max/Documents/JMLGPT/tmp/BubbleSortDesc.java:3: error: cannot find symbol
    //@ ensures (\forall int i, j; 0 <= i && i < arr.length && 0 <= j && j < arr.length; i < j ==> arr[i] >= arr[j]);
                                                                                                             ^
  symbol:   variable arr
  location: class BubbleSortDesc
5 errors

